# latent-diffusion-inpainting

./: .flake8  .gitignore  Makefile  inference_autoencoder.ipynb  inference_latent_diffusion_model.ipynb  main.py  pyproject.toml
ldm/ldm/data/: PIL_data.py  test.ipynb
ldm/ldm/models/diffusion/: ddim.py  ddpm.py
ldm/ldm/modules/diffusionmodules/: util.py
ldm/ldm/modules/image_degradation/: utils_image.py
ldm/models/ldm/inpainting_big/: config.yaml
lightning_logs/version_0/: events.out.tfevents.1725274121.AMAMQ42JW7KDY.5410.0
lightning_logs/version_1/: events.out.tfevents.1725348340.AMAMQ42JW7KDY.2160.0
lightning_logs/version_2/: events.out.tfevents.1725348593.AMAMQ42JW7KDY.4416.0
lightning_logs/version_3/: events.out.tfevents.1725348721.AMAMQ42JW7KDY.6476.0
lightning_logs/version_4/: events.out.tfevents.1725350272.AMAMQ42JW7KDY.14570.0
lightning_logs/version_5/: events.out.tfevents.1725351435.AMAMQ42JW7KDY.22196.0
lightning_logs/version_6/: events.out.tfevents.1725354699.AMAMQ42JW7KDY.42334.0
