[tool.poetry]
name = "latent-diffusion-inpainting"
version = "0.1.0"
description = ""
authors = ["gireg.roussel <giregroussel@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.1"
omegaconf = "^2.3.0"
pillow = "^10.4.0"
tqdm = "^4.66.4"
numpy = "^1.26.4"
torch = "^2.4.0"
einops = "^0.8.0"
matplotlib = "^3.9.1"
torchvision = "^0.19.0"
pytorch-lightning = "^2.3.3"
clip = {git = "https://github.com/openai/CLIP.git"}
taming-transformers = {path = "taming-transformers"}
opencv-python = "^4.10.0.84"
albumentations = "^1.4.13"
tensorboard = "^2.17.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
nbqa = "^1.8.5"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
