[tool.poetry]
name = "latent-diffusion-inpainting"
version = "0.1.0"
description = ""
authors = ["gireg.roussel <giregroussel@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.5"
numpy="^1.19.2"
torch = "1.7.0"
torchvision = "0.8.1"
opencv-python = "4.1.2.30"
albumentations = "0.4.3"
pudb = "2019.2"
imageio = "2.9.0"
imageio-ffmpeg = "0.4.2"
pytorch-lightning = "1.4.2"k
omegaconf = "2.1.1"
test-tube = "^0.7.5"
streamlit = "^0.73.1"
einops = "0.3.0"
torch-fidelity = "0.3.0"
transformers = "4.3.1"
clip = {git = "https://github.com/openai/CLIP.git"}
taming-transformers = {path = "taming-transformers"}


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
nbqa = "^1.8.5"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"